# RentSense

./: .dvcignore  .env  .flake8  .gitignore  AUTO_PULL_SETUP.md  BACKUP_STRATEGY.md  CHECKPOINT_CHECKLIST.md  CHECKPOINT_REPORT.md  CHECKPOINT_REPORT_10_03.md  DEPLOY.md  DEPLOYMENT_SUMMARY.md  DEPLOY_SIMPLE.md  Dockerfile  Dockerfile.telegram  EXECUTION_PLAN.md  FINAL_CHECK.md  FIRST_STEPS.md  FIX_ALL.sh  GIT_SETUP.md  MONITORING.md  NEXT_STEPS.md  OPTIMIZATION.md  PRE_DEPLOY_CHECKLIST.md  PROXY_RECOMMENDATIONS.md  QUICKSTART.md  QUICK_FIX_SERVER.md  QUICK_START.md  README.md  README_SERVER.md  RESOURCE_REQUIREMENTS.md  SCALING_GUIDE.md  SETUP_VDSINA.md  STAGE1_COMPLETION.md  STAGE1_RESULTS.md  add_new_proxies.py  add_proxies.py  add_rent_fields_migration.py  analyze_cian_response.py  analyze_html.py  analyze_html_structure.py  (+156 more)
.github/workflows/: ci.yml
app/: main.py
app/api/: main.py  model_loader.py  models.py  preprocess.py  preprocess_inference.py  rate_limit.py  search.py  theards.py  threads.py
app/bot/: README.md  __init__.py  alert_logic.py  database.py  predict_client.py  scanner.py  scheduler.py  telegram_bot.py  templates.py
app/parser/: database.py  database.py.backup_1768042327  database.py.broken  download_photos.py  (+8 more)
ml/: EXPERIMENTS.md  count_features.py  metrics.py  mlflow_config.py  prepare_data.py  train_baseline.py  train_quantile.py
scripts/: check_parser_logs.md  monthly_model_retrain.py
tests/: conftest.py  test_api_main.py  test_geo_features.py  test_mlflow_config.py  test_model_loader.py  test_parser.py  test_prepare_data_pipeline.py
(+17 files in other folders)
